--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,18 @@
 /DTcms.Web/obj/Debug
 /DTcms.Web.UI/bin/Debug
 /DTcms.Web.UI/obj/Debug
+/DTcms.API/bin/Release
+/DTcms.API/obj/Release
+/DTcms.BLL
+/DTcms.Common/bin/Release
+/DTcms.Common/obj/Release
+/DTcms.DAL/bin/Release
+/DTcms.DAL/obj/Release
+/DTcms.DBUtility/bin/Release
+/DTcms.DBUtility/obj/Release
+/DTcms.Model/bin/Release
+/DTcms.Model/obj/Release
+/DTcms.Web/html
+/DTcms.Web/obj/Release
+/DTcms.Web.UI/bin/Release
+/DTcms.Web.UI/obj/Release
